refactor: Run OpenRewrite Spring Boot 3.3 recipes